refactor de locale (#248)

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -1,9 +1,9 @@
 {
   "homepage": {
     "title": "Ihr Reiseveranstalter Nr. 1 für Griechenland & Zypern in der Schweiz",
-    "subTitle": "der Sie in die ganze Welt bringen kann!",
-    "textFieldLabel": "Wohin möchten Sie reisen?",
-    "textFieldButton": "Los!",
+    "subTitle": "der Sie in die ganze Welt bringen kann",
+    "textFieldLabel": "Wohin möchten Sie reisen",
+    "textFieldButton": "Los",
     "selectTypeTitle": "Oder wählen Sie eine unserer Reisekategorien",
     "whoWeAreTitle": "Wir über uns",
     "whoWeAreSubTitle": "Das Laros Reisen Team in Aesch betreut seit mehr als 35 Jahren Schweizer Reisende, die Griechenland und Zypern besuchen möchten. Mit grossem Engagement ist unser Fokus darauf gerichtet, Ihnen ein Reiseerlebnis abseits des Massentourismus zu bieten. Wenn Sie sich für Laros Reisen entscheiden, stellen wir Ihnen individuelle und massgeschneiderte Reisepläne zusammen. Unser kompetentes Team kennt Griechenland persönlich und überprüft immer wieder alle Angebote. Diese Erfahrungen ermöglichen es uns, Ihnen ein einzigartiges Reiseerlebnis zu versprechen.",
@@ -53,7 +53,7 @@
     "descText2": "Wir begnen jedem Kunden mit Individualität und beraten Sie gerne Ihren Bedürfnissen entsprechend. Seit der Gründung des Unternehmens 'Laros Reisen' hat unsere Kundenorientierung uns zu einem führenden Anbieter von authentischen Reisen gemacht.",
     "text3": "24/7 Kundensupport",
     "descText3": "Das Team von Laros Reisen steht Ihnen natürlich jederzeit für allfällige Fragen zur Verfügung, vor, während und nach Ihrer Reise.",
-    "lastDescription": "Sie können jedoch sicher sein, dass das erfahrene Team von Reiseberatern unseres Büros Ihnen bei allen Anfragen rund um das Reisen in jeder Ecke der Welt behilflich sein kann. Unsere langjährige Erfahrung in der Reisebranche macht uns zur richtigen Wahl für jede Reise, die Sie planen möchten.Von Urlaubsreisen und Fähr-, Flug- oder Bahntickets bis hin zu spezielleren Angeboten für Individual- und Themenreisen, Hochzeits- und Geschäftsreisen und Konferenzen können wir jeden Ihrer Wünsche erfüllen.Unser Team steht Ihnen während Ihrer gesamten Anfrage zur Seite, von dem Moment an, in dem Sie uns wegen Ihrer Reise kontaktieren, bis hin zu Ihrer Ankunft und Rückkehr. Der 24-Stunden-Notdienst ist ein wichtiger Service unserer kundenorientierten Firmenphilosophie, mit dem Ziel, Ihnen in allen Situationen zur Seite zu stehen. Am 1.1.2021, nach 35 Jahren, wurde Laros Reisen GmbH in neue Hände übergeben. Die neuen Eigentümer sind die Söhne der Besitzer unserer Hauptagentur Antaeus Travel in Griechenland, mit welcher bereits seit 30 Jahren eine wertvolle Zusammenarbeit besteht. Georgios Chatzantonis und Athanasios Nikolaou haben ihr Studium in der Schweiz abgeschlossen und sind seit vielen Jahren mit dem Griechenland Angebot von Laros Reisen vertraut. Sie haben sich entschlossen das Produkt von Laros Reisen, das für seinen guten Service und die fundierten Landeskenntnisse bekannt ist, weiterzuführen und auszubauen. Die langjährigen Mitarbeiterinnen sowie das bestehende Büro in Aesch werden übernommen.  Vorläufig werden sie nach Bedarf auch noch auf die Unterstützung und Mitarbeit der Gründer der Firma, Yolanda und Georgios Labaras, zählen können. Somit ist das Weiterbestehen des Griechenlandspezialisten mit seinen Nischenangeboten auch für die Zukunft gesichert. vielen "
+    "lastDescription": "Sie können jedoch sicher sein, dass das erfahrene Team von Reiseberatern unseres Büros Ihnen bei allen Anfragen rund um das Reisen in jeder Ecke der Welt behilflich sein kann. Unsere langjährige Erfahrung in der Reisebranche macht uns zur richtigen Wahl für jede Reise, die Sie planen möchten.Von Urlaubsreisen und Fähr-, Flug- oder Bahntickets bis hin zu spezielleren Angeboten für Individual- und Themenreisen, Hochzeits- und Geschäftsreisen und Konferenzen können wir jeden Ihrer Wünsche erfüllen.Unser Team steht Ihnen während Ihrer gesamten Anfrage zur Seite, von dem Moment an, in dem Sie uns wegen Ihrer Reise kontaktieren, bis hin zu Ihrer Ankunft und Rückkehr. Der 24-Stunden-Notdienst ist ein wichtiger Service unserer kundenorientierten Firmenphilosophie, mit dem Ziel, Ihnen in allen Situationen zur Seite zu stehen. Am 1.1.2021, nach 35 Jahren, wurde Laros Reisen GmbH in neue Hände übergeben. Die neuen Eigentümer sind die Söhne der Besitzer unserer Hauptagentur Antaeus Travel in Griechenland, mit welcher bereits seit 30 Jahren eine wertvolle Zusammenarbeit besteht. Georgios Chatzantonis und Athanasios Nikolaou haben ihr Studium in der Schweiz abgeschlossen und sind seit vielen Jahren mit dem Griechenland Angebot von Laros Reisen vertraut. Sie haben sich entschlossen das Produkt von Laros Reisen, das für seinen guten Service und die fundierten Landeskenntnisse bekannt ist, weiterzuführen und auszubauen. Die langjährigen Mitarbeiterinnen sowie das bestehende Büro in Aesch werden übernommen.  Vorläufig werden sie nach Bedarf auch noch auf die Unterstützung und Mitarbeit der Gründer der Firma, Yolanda und Georgios Labaras, zählen können. Somit ist das Weiterbestehen des Griechenlandspezialisten mit seinen Nischenangeboten auch für die Zukunft gesichert."
   },
   "team": {
     "title": "Lernen Sie unser Team in der Schweiz und Griechenland kennen",
@@ -236,12 +236,12 @@
     "ContactUs": "Sie haben nicht gefunden, wonach Sie gesucht haben?",
     "Tab_1": "Fluganfrage",
     "Tab_2": "Pauschalreise anfragen",
-    "label1": "Abreise von:",
-    "label2": "Ankunft in:",
+    "label1": "Abreise von",
+    "label2": "Ankunft in",
     "label3": "früheste Abreise",
     "label4": "späteste Rückreise",
     "label5": "Klasse",
-    "label6": "Reisende/Reisender 1:",
+    "label6": "Reisende/Reisender",
     "label7": "Vor- und Nachname",
     "label8": "Staatsangehörigkeit",
     "label9": "Geschlecht",
@@ -252,8 +252,8 @@
     "label14": "Hotelkategorie",
     "label15": "Reisepreis insgesamt ",
     "buttonSave": "Speichern",
-    "travellersTotal": "2 Reisende insgesamt",
-    "address": "Adresse #1",
+    "travellersTotal": "Reisende insgesamt",
+    "address": "Adresse",
     "addAddress": "Eine weitere Adresse hinzufügen",
     "submitButton": "Anfrage einreichen",
     "star": "5 Sterne",
@@ -266,7 +266,7 @@
     "Privacy2": "Allgemeine Geschäftsbedingungen und Datenschutzrichtlinie",
     "Privacy3": "und",
     "Privacy4": "Datenschutzbestimmungen",
-    "travellerTotal": "1 Reisender insgesamt"
+    "travellerTotal": "Reisender insgesamt"
   },
   "travelPlanner": {
     "title": "Reiseplaner",
@@ -280,7 +280,7 @@
     "subtitle": "Sorgfältig ausgewählte Reisen zu den griechischen Inseln, empfohlen von unserem erfahrenen Laros-Team. Welche wählen Sie aus? Das blaugrüne Wasser des Ionischen Meers oder das tiefe Blau der Ägäis? Die grünen Inseln der Sporaden, der saronischen und der Ionischen Inseln oder der Kontrast der weißen Häuser und der einzigartigen Architektur, die die Kykladen und den Dodekanes bezeichnen? Viele zur Auswahl, sogar an versteckten Reisezielen in Griechenland.",
     "sortBy": "Sortieren nach",
     "from": "Von",
-    "tags": "Stichwörter:"
+    "tags": "Stichwörter"
   },
   "travelPlannerTabs": {
     "tab1": "Reiseplan",
@@ -295,7 +295,7 @@
     "proPerson": "pro person",
     "addRoom": "Zimmer hinzufügen",
     "startTripButton": "Reiseplanung starten",
-    "highlights": "Highlights:",
+    "highlights": "Highlights",
     "tab1": "Reiseplan",
     "tab2": "Insider-Tipps",
     "tab3": "Zugehörige Touren",
@@ -330,7 +330,7 @@
     "subTitle": "Ihre nächste Reise steht vor der Tür. Unser Team wird jedes Detail Ihrer Nachricht durchgehen und den schönsten Reisevorschlag für Sie zusammenstellen, der auf Ihre Wünsche zugeschnitten ist. Bitte füllen Sie alle entsprechenden Details aus.",
     "label1": "Anrede",
     "label2": "Tippen Sie zum Hinzufügen",
-    "buttonSave": "Anrede*",
+    "buttonSave": "Anrede",
     "buttonCancel": "Abbrechen",
     "sendUs": "Senden Sie uns eine Nachricht",
     "exact": "Genaue Reisetage",
@@ -358,7 +358,7 @@
     "car": "Transfer",
     "ferry": "Fähre",
     "oldCorinth": "Old Corinth",
-    "location": "Ort:",
+    "location": "Ort",
     "duration": "Dauer",
     "edit": "Bearbeiten",
     "add": "Ort hinzufügen ",
@@ -399,7 +399,7 @@
     "windowTitle": "Zimmerkategorie ändern",
     "close": "Schliessen",
     "title": "Hotels von",
-    "subTitle": "Um die Zimmerkategorie zu ändern, wählen Sie bitte eine der folgenden Varianten:",
+    "subTitle": "Um die Zimmerkategorie zu ändern, wählen Sie bitte eine der folgenden Varianten",
     "save": "Ausgewählte Kategorie speichern",
     "cancel": "Abbrechen",
     "selected": "Ausgewählt",
@@ -410,7 +410,7 @@
     "windowTitle": "Ort ändern",
     "close": "Schliessen",
     "title": "Gebiete von",
-    "subTitle": "Um den Ort zu ändern, wählen Sie bitte eine der folgenden Varianten:",
+    "subTitle": "Um den Ort zu ändern, wählen Sie bitte eine der folgenden Varianten",
     "select": "Auswählen",
     "selected": "Ausgewählt",
     "back": "Zurück",
@@ -418,7 +418,7 @@
     "add": "Fügen Sie diesen Ort der Reise hinzu",
     "save": "Änderungen speichern",
     "cancel": "Abbrechen",
-    "highlights": "Highlights:"
+    "highlights": "Highlights"
   },
   "changingHotel": {
     "windowTitle": "Unterkunft ändern",
@@ -426,7 +426,7 @@
     "title": "Hotels von",
     "subTitle": "Um die Unterkunft zu ändern, wählen Sie bitte eine der folgenden Varianten:",
     "price": "Preisspanne",
-    "tags": "Stichwörter:",
+    "tags": "Stichwörter",
     "from": "Ab",
     "next": "Weiter: Zimmerkategorie wählen",
     "cancel": "Abbrechen",
@@ -436,7 +436,7 @@
   "changingTransfer": {
     "windowTitle": "Transfervariante ändern",
     "close": "Schliessen",
-    "title": "Verfügbare Transfervarianten:",
+    "title": "Verfügbare Transfervarianten",
     "current": "Aktuell",
     "car": "Autotransfer",
     "tab1": "Economy",
@@ -450,7 +450,7 @@
     "people": "Personen",
     "selectCar": "Auto auswählen",
     "carRental": "Mietwagenbestimmungen",
-    "rentPrice": "Mietpreis für X Tage:",
+    "rentPrice": "Mietpreis für X Tage",
     "selected": "Ausgewählt",
     "terms": "Bedingungen und Konditionen",
     "text1": "Update this description",
@@ -507,9 +507,9 @@
   "tripForm": {
     "title": "Zurück zum vorherigen Schritt",
     "resetText": "Alle Änderungen zurücksetzen",
-    "crumbStep1": "Schritt 1:",
+    "crumbStep1": "Schritt 1",
     "stepName1": "Reisedetails",
-    "crumbStep2": "Schritt 2:",
+    "crumbStep2": "Schritt 2",
     "stepName2": "Angaben zu den Reisenden",
     "ask": "Bitten Sie den Manager um Informationen über eine Versetzung",
     "select": "Wählen Sie aus, wohin oder von wo aus Sie gehen möchten, um die Optionen zu sehen"
@@ -537,14 +537,14 @@
       "contactText": "KONTAKT",
       "addressText": "Hauptstrasse",
       "address": "Hauptstrasse 94 CH-4147 Aesch",
-      "telText": "Tel / Fax: ",
+      "telText": "Tel / Fax",
       "telNumber": "061 / 756 80 80",
-      "emailText": "E-Mail: ",
+      "emailText": "E-Mail",
       "email": "info@laros.ch",
       "workingHoursText": "Geschäftszeiten:",
-      "moText": "Mo: ",
+      "moText": "Mo",
       "mo": "14:00 bis 17:00",
-      "tu-frText": "Di-Fr:",
+      "tu-frText": "Di-Fr",
       "tu-fr": "10:00 bis 12:00 und 14:00 bis 17:00",
       "followText": "FOLGEN SIE UNS AUF",
       "textInfo": "© Laros Reisen. Alle Rechte vorbehalten",
@@ -663,21 +663,21 @@
     "inputLabel2": "E-Mail-Adresse",
     "inputLabel3": "Reiseziel",
     "inputLabel4": "Kapazität",
-    "inputLabel5": "Vor- und Nachname:",
-    "inputLabel6": "Telefonnummer:",
-    "inputLabel7": "Ihre Nachricht:",
+    "inputLabel5": "Vor- und Nachname",
+    "inputLabel6": "Telefonnummer",
+    "inputLabel7": "Ihre Nachricht",
     "inputLabel8": "Empfängername",
     "inputLabel9": "Gutschein vom ",
     "inputLabel10": "Geben Sie die Adresse und Telefonnummer des Empfängers ein",
-    "inputLabel11": "Unterregion:",
+    "inputLabel11": "Unterregion",
     "inputLabel12": "Kategorie",
     "inputLabel13": "Preisspanne",
-    "inputLabel14": "Ausgangspunkt:",
+    "inputLabel14": "Ausgangspunkt",
     "inputLabel15": "Flug nach",
     "inputLabel16": "Dauer",
     "inputLabel17": "Reisedauer",
-    "inputLabel18": "Kinder (2-12 Jahre alt):",
-    "inputLabel19": "Personenanzahl in einem Zimmer:",
+    "inputLabel18": "Kinder (2-12 Jahre alt)",
+    "inputLabel19": "Personenanzahl in einem Zimmer",
     "inputLabel20": "Reisedaten",
     "inputLabel21": "Standard, Betten",
     "inputLabel22": "Art der Unterkunft",
@@ -686,7 +686,7 @@
     "inputLabel25": "Land",
     "inputLabel26": "Stadt",
     "inputLabel27": "Adresszeile",
-    "inputLabel28": "Postleitzahl *",
+    "inputLabel28": "Postleitzahl",
     "inputLabel29": "Im Geschäft",
     "inputLabel30": "Vollständiger Name und Nachname",
     "inputLabel31": "Vollzeit",
@@ -710,7 +710,7 @@
     "radioLabel15": "Übernachtung und Frühstück",
     "inputNumber1": "Erwachsene",
     "inputNumber2": "Kinder",
-    "inputNumber3": "Personenanzahl in einem Zimmer:",
+    "inputNumber3": "Personenanzahl in einem Zimmer",
     "email1": "knownothing@example.com",
     "email2": "jon@knownothing.net",
     "email3": "jon.doe@example.com",
