add early booking message (#246)
* add early booking message

* fix early booking message

* fix conflicts

* fix conflicts

* fix conflict

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -377,6 +377,7 @@
     "next": "Nächster Schritt",
     "save": "Änderungen speichern",
     "cancel": "Abbrechen",
+    "earlyBookingMessage": "Bei Buchung dieses Arrangements gewähren wir einmalig einen Frühbucherrabatt von CHF 100.00",
     "contactInfo": "Kontaktinformation",
     "day": "tag",
     "days": "Tage",
