add allocation alert, change getClientsRoom helper (#250)
* add allocation alert, change getClientsRoom helper

* fix build

* destruct getClientsRoom call

* add comment in hepler

* replace comment in helper

* Revert "replace comment in helper"

This reverts commit e16c1eeb21b06fa4cbc0a3ed18c573f7e9ef10df.

* fix for build

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -394,7 +394,8 @@
     "warning": "Bitte beachten Sie, dass dies eine dynamische Preisgestaltung ist. Der endgültige Preis wird von unserem Team berechnet.",
     "noDescription": "Keine Beschreibung",
     "endPoint": "Endpunkt",
-    "out": "aus"
+    "out": "aus",
+    "allocatedRooms": "Die Zimmerzuteilung wurde entsprechend der Hotelkapazität angepasst"
   },
   "changingRoomType": {
     "windowTitle": "Zimmerkategorie ändern",
