fix about team page info (#263)
* fix about team page info

* fix after review

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -58,18 +58,18 @@
   "team": {
     "title": "Lernen Sie unser Team in der Schweiz und Griechenland kennen",
     "description": "Unsere Reiseexperten mit eigener Erfahrung zu unseren angebotenen Reisezielen stellen Ihre Reise zusammen, stehen Ihnen von Anfang bis Ende Ihrer Reise zur Seite und freuen sich Ihre Reisegeschichten zu hören.",
-    "Team_1_profession": "Nursing Assistant",
-    "Team_1_description": "Dictum ultrices eget scelerisque maecenas. Nisl cursus nam id hac scelerisque pulvinar.",
-    "Team_2_profession": "President of Sales",
-    "Team_2_description": "In sit rhoncus enim, et viverra quis nisl. Arcu in justo enim nec.",
-    "Team_3_profession": "Web Designer",
-    "Team_3_description": "Sit massa pretium sem sed et at urna. Dolor ac neque a pulvinar purus pharetra malesuada.",
-    "Team_4_profession": "Marketing Coordinator",
-    "Team_4_description": "Eu nam quis faucibus scelerisque sit commodo. At fusce urna, malesuada fringilla nisl, id aenean cras lobortis.",
-    "Team_5_profession": "Medical Assistant",
-    "Team_5_description": "Habitasse semper mattis dolor quam tristique leo. Adipiscing arcu, ultricies ut lacus blandit mus morbi sodales.",
-    "Team_6_profession": "Nursing Assistant",
-    "Team_6_description": "Diam mi vestibulum montes, ornare sodales volutpat. Potenti imperdiet at ultricies diam commodo."
+    "Team_1_profession": "Geschäftsführer",
+    "Team_1_description": "",
+    "Team_2_profession": "Geschäftsführer",
+    "Team_2_description": "",
+    "Team_3_profession": "Reservierungs- & Abteilungsleiter",
+    "Team_3_description": "",
+    "Team_4_profession": "Reiseexpertin",
+    "Team_4_description": "",
+    "Team_5_profession": "Reiseexpertin",
+    "Team_5_description": "",
+    "Team_6_profession": "Reiseexpertin",
+    "Team_6_description": ""
   },
   "testimonials": {
     "title": "Was über uns gesagt wird",
