Change "Mann" to "Herr" in contact forms (#269)

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -698,7 +698,7 @@
     "radioLabel1": "Economy Class",
     "radioLabel2": "Business Class",
     "radioLabel3": "Frau",
-    "radioLabel4": "Mann",
+    "radioLabel4": "Herr",
     "radioLabel5": "Privattransfer",
     "radioLabel6": "Bustransfer",
     "radioLabel7": "Erste Class",
