add taxi support (#280)
* add taxi support

* fix conflicts

* fix conflicts

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -251,6 +251,7 @@
     "label13": "Übertragung",
     "label14": "Hotelkategorie",
     "label15": "Reisepreis insgesamt ",
+    "label16": "Taxi",
     "buttonSave": "Speichern",
     "travellersTotal": "Reisende insgesamt",
     "address": "Adresse",
