add missed translations

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -257,7 +257,8 @@
     "address": "Adresse",
     "addAddress": "Eine weitere Adresse hinzufügen",
     "submitButton": "Anfrage einreichen",
-    "star": "5 Sterne",
+    "star": "Stern",
+    "stars": "Sterne",
     "boardType": "Verpflegungsart (Sie können mehrere auswählen)",
     "board1": "Alles inklusive",
     "board2": "Vollpension",
@@ -538,17 +539,17 @@
     "footer": {
       "linksText": "WEBSITE-LINKS",
       "contactText": "KONTAKT",
-      "addressText": "Hauptstrasse",
-      "address": "Hauptstrasse 94 CH-4147 Aesch",
-      "telText": "Tel / Fax",
-      "telNumber": "061 / 756 80 80",
+      "addressText": "",
+      "address": "Hauptstrasse 94 \n\n CH-4147 Aesch",
+      "telText": "Tel",
+      "telNumber": "061 756 80 80",
       "emailText": "E-Mail",
       "email": "info@laros.ch",
-      "workingHoursText": "Geschäftszeiten:",
+      "workingHoursText": "Öffnungszeiten",
       "moText": "Mo",
-      "mo": "14:00 bis 17:00",
-      "tu-frText": "Di-Fr",
-      "tu-fr": "10:00 bis 12:00 und 14:00 bis 17:00",
+      "mo": "13:30 – 18:00 Uhr",
+      "tu-frText": "Di bis Fr",
+      "tu-fr": "09:00 – 12:00 und 13:30 – 18:00 Uhr",
       "followText": "FOLGEN SIE UNS AUF",
       "textInfo": "© Laros Reisen. Alle Rechte vorbehalten",
       "link1": "Hauptseite",
@@ -603,7 +604,7 @@
     "useText3": "Barauszahlung, Umtausch und nachträgliche Rückzahlung für bereits gebuchte Reisen sind ausgeschlossen.",
     "invoiceBlock": "Versand von  Geschenkgutscheinen & Rechnung",
     "invoiceBlock1": "Versand des/der Geschenkgutschein(e): nach Eingang des Rechnungsbetrages",
-    "invoiceBlock2": "Rechnungsversand: Nach dem Absenden des Bestellformulars wird Ihnen die Rechnung per separater E-Mail",
+    "invoiceBlock2": "Rechnungsversand: Nach dem Absenden des Bestellformulars wird Ihnen die Rechnung per separater E-Mail zugesandt",
     "invoiceBlock3": "Gültigkeit: Der Gutschein wird nach Zahlung des Rechnungsbetrages gültig.",
     "buttonDone": "Absenden",
     "thankYou": "Vielen Dank für Ihre Bestellung.",
@@ -677,8 +678,8 @@
     "inputLabel13": "Preisspanne",
     "inputLabel14": "Ausgangspunkt",
     "inputLabel15": "Flug nach",
-    "inputLabel16": "Dauer",
-    "inputLabel17": "Reisedauer",
+    "inputLabel16": "Telefon",
+    "inputLabel17": "Mitteilung",
     "inputLabel18": "Kinder (2-12 Jahre alt)",
     "inputLabel19": "Personenanzahl in einem Zimmer",
     "inputLabel20": "Reisedaten",
@@ -698,11 +699,12 @@
     "inputLabel34": "Addresse",
     "radioLabel1": "Economy Class",
     "radioLabel2": "Business Class",
+    "radioLabelEconomyPlus": "Zwischenklasse",
     "radioLabel3": "Frau",
     "radioLabel4": "Herr",
     "radioLabel5": "Privattransfer",
     "radioLabel6": "Bustransfer",
-    "radioLabel7": "Erste Class",
+    "radioLabel7": "First Class",
     "radioLabel8": "Ja",
     "radioLabel9": "Nein",
     "radioLabel10": "Privater Transfer",
@@ -711,8 +713,10 @@
     "radioLabel13": "Vollpension",
     "radioLabel14": "Halbpension",
     "radioLabel15": "Übernachtung und Frühstück",
+    "radioNoMeals": "Ohne Mahlzeiten",
     "inputNumber1": "Erwachsene",
     "inputNumber2": "Kinder",
+    "inputNumberBaby": "Baby",
     "inputNumber3": "Personenanzahl in einem Zimmer",
     "email1": "knownothing@example.com",
     "email2": "jon@knownothing.net",
@@ -733,7 +737,7 @@
     "notFoundText": "Sie haben nicht gefunden, wonach Sie gesucht haben?",
     "notFoundPage": "Seite nicht gefunden",
     "addSubRegion": "Unterregion hinzufügen",
-    "nightPro": "pro Nacht pro 1 Person",
+    "nightPro": "pro Nacht pro Person",
     "forChanging": "für Umkleideraumtyp",
     "addLocation": "Hinzufügen von Standorten",
     "traveler": "Reisende",
