--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -242,7 +242,7 @@
     "label4": "späteste Rückreise",
     "label5": "Klasse",
     "label6": "Reisende/Reisender",
-    "label7": "Vor- und Nachname",
+    "label7": "Vor- und Nachname (gemäss ID)",
     "label8": "Staatsangehörigkeit",
     "label9": "Geschlecht",
     "label10": "Geburtsdatum",
@@ -713,6 +713,7 @@
     "radioLabel13": "Vollpension",
     "radioLabel14": "Halbpension",
     "radioLabel15": "Übernachtung und Frühstück",
+    "radioLabelEconomyPlus": "Zwischenklasse",
     "radioNoMeals": "Ohne Mahlzeiten",
     "inputNumber1": "Erwachsene",
     "inputNumber2": "Kinder",
